kubernetes/manifests/nutritrace/nutritrace-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nutritrace
spec: {}
status: {}
