kubernetes/manifests/nutritrace/nuitritrace-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nutritrace-pod
  name: nutritrace-pod
  namespace: nutritrace
spec:
  containers:
  - image: ghcr.io/traceapps/nutritrace:latest
    name: nutritrace-pod
    ports:
      - containerPort: 3001
        protocol: TCP
    volumeMounts:
      - name: database
        mountPath: /db
      - name: uploads
        mountPath: /uploads
  volumes:
  - name: database
    nfs:
      server: 192.168.1.65
      path: /mnt/pve/bigkev/nutritrace/database
  - name: uploads
    nfs:
      server: 192.168.1.65
      path: /mnt/pve/bigkev/nutritrace/uploads
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
