kubernetes/manifests/nutritrace/nutritrace-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nutritrace-svc
  name: nutritrace-svc
  namespace: nutritrace
spec:
  ports:
  - name: service-port
    nodePort: 30004
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: nutritrace-pod
  type: NodePort
status:
  loadBalancer: {}
