kubernetes/manifests/nutritrace/nutritrace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nutritrace-ingress
  namespace: nutritrace
spec:
  ingressClassName: nginx
  rules:
  - host: track.lab
    http:
      paths:
      - backend:
          service:
            name: nutritrace-svc
            port:
              number: 3001
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
