kubernetes/manifests/nutritrace/nutritrace-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nutritrace-np
spec:
  podSelector:
    matchLabels:
      app: nutritrace-pod
  policyTypes:
  - Ingress
  - Egress
  # default deny all ingress and egress traffic
  ingress: {}
  egress: {}
